fix problems with query response
